--- a/index.html
+++ b/index.html
@@ -15,3 +15,27 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 </head>
+<body>
+     <!-- header -->
+    <header class="header">
+        <!--icon-izq-->
+        <div class="header__conteiner-logo">
+            <img class="header__logo" src="images/logo-starbucks.png" alt="logo-starbucks-header"/>
+        </div>
+        <!--nav-cent-->
+        <nav class="header__conteiner-navlink">
+            <a class="header__navlink" href="#">INICIO</a>
+            <a class="header__navlink" href="#">CAFÉ</a>
+            <a class="header__navlink" href="#">SOBRE NOSOTROS</a>
+            <a class="header__navlink" href="#">DELIVERY</a>
+        </nav>
+        <!--login-der-->
+        <div class="header__conteiner-usuario">
+            <i class="bi bi-person-circle"></i>
+        </div>
+        <div class="header__conteiner-usuario-mobile">   
+            <i class="bi bi-list"></i>
+        </div>
+    </header>
+</body>
+</html>
