--- a/index.html
+++ b/index.html
@@ -37,5 +37,24 @@
             <i class="bi bi-list"></i>
         </div>
     </header>
+    <!--main-->
+    <main class="main">
+        <!--div-conteiner-texto-->
+        <div class="main__conteiner-texto">
+             <!--h1-izq-sup-->
+            <h1 class="main__texto-h2">No solo es café es 
+                <span class="main__texto-span">Starbucks</span> 
+            </h1>
+            <!--p-izq-inf-->
+            <p class="main__texto-p">Cada día, acudimos a trabajar con la esperanza de conseguir dos cosas: 
+                compartir el mejor café con nuestros amigos y contribuir a que el mundo sea un poco mejor. 
+                Así era cuando abrió la primera tienda Starbucks en 1971, y así continúa siendo hoy.</p>
+        </div>
+        <!--div-conteiner-logo-->
+        <div class="main__conteiner-logo">
+            <!--logo-der-->
+            <img class="main__logo" src="images/logo-starbucks.png" alt="logo-starbucks-main"/>
+        </div>
+    </main>
 </body>
 </html>
