HTML y CSS gallery

--- a/index.html
+++ b/index.html
@@ -56,5 +56,11 @@
             <img class="main__logo" src="images/logo-starbucks.png" alt="logo-starbucks-main"/>
         </div>
     </main>
+    <!--gallery-section-->
+    <section class="gallery">
+        <img class="gallery__img" src="./images/gallery-1.png" alt="gallery-1"/>
+        <img class="gallery__img" src="./images/gallery-2.png" alt="gallery-2"/>
+        <img class="gallery__img" src="./images/gallery-3.png" alt="gallery-3"/>  
+    </section>
 </body>
 </html>
