HTML y CSS contacto

--- a/index.html
+++ b/index.html
@@ -62,5 +62,20 @@
         <img class="gallery__img" src="./images/gallery-2.png" alt="gallery-2"/>
         <img class="gallery__img" src="./images/gallery-3.png" alt="gallery-3"/>  
     </section>
+    <!--contact-us-section-->
+    <section class="contactus">
+        <h2 class="contactus__h2">CONTACTANOS</h2>
+        <form class="contactus__form">
+            <div class="contactus__div">
+                <label class="contactus__label">correo electrónico</label>
+                <input class="contactus__input" type="email" placeholder="coloque su correo electrónico" />
+            </div>
+            <div class="contactus__div">
+                <label class="contactus__label">comentario</label>
+                <textarea class="contactus__input" placeholder="coloque su comentario"></textarea>
+            </div>
+            <button class="contactus__button">Enviar</button>
+        </form>
+    </section>
 </body>
 </html>
