Modificaci{on Título desde GitHub
pasa de "Starbucks" a "Starbucks (mod GitHub)"

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-compatible" content="IE-edge"/>  
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Starbucks</title>
+    <title>Starbucks (mod Github)</title>
     <meta name="keywords" content="Starbucks, café, social, bebidas, desayuno, merienda, relax"/>
     <meta name="description" content="Descripción de Starbucks"/>
     <meta name="author" content="Patrizio Faroppa"/>
