HTML y CSS cards

--- a/index.html
+++ b/index.html
@@ -77,5 +77,63 @@
             <button class="contactus__button">Enviar</button>
         </form>
     </section>
+    <!--cards-section-->
+    <section class="cards">
+        <!--card-1-->
+        <article class="cards__conteiner-card"> 
+            <div class="cards__circulo-amarillo">5%</div>
+            <img class="cards__img" src="./images/card-1.png" alt="image-card-1" />
+            <div class="cards__conteiner-text"> 
+                <h2 class="cards__h2">Aplicación de 
+                    <span class="cards__span">Starbucks</span>
+                </h2>
+                <p class="cards__p">Ahorre tiempo con click & collect y recolecte sus estrellas.
+                Hacer pedido nunca ha sido tan facil.
+                </p>
+            </div>
+            <button class="cards__button" href="#">Pruébelo</button>
+        </article>
+        <!--card-2-->
+        <article class="cards__conteiner-card">
+            <div class="cards__circulo-amarillo">10%</div> 
+            <img class="cards__img" src="./images/card-2.png" alt="image-card-2" />
+            <div class="cards__conteiner-text">
+                <h2 class="cards__h2">Starbucks 
+                    <span class="cards__span">Delivery</span>
+                </h2>
+                <p class="cards__p">Starbucks entrega su comida y bebida favorita en la puerta de su casa.
+                </p>
+            </div>
+            <div class="cards__button-conteiner-deliv">
+                <button class="cards__button" href="#">Entrega por UberEat</button>
+                <button class="cards__button" href="#">Entrega por PedidoYa</button>
+            </div>
+        </article>
+        <!--card-3-->
+        <article class="cards__conteiner-card"> 
+            <img class="cards__img" src="./images/card-3.png" alt="image-card-3" />
+            <div class="cards__conteiner-text">
+                <h2 class="cards__h2">Novedades 
+                    <span class="cards__span">Starbucks</span>
+                </h2>
+                <p class="cards__p">Manténgase informado de nuestras últimas novedades y actualizaciones.
+                </p>
+            </div>
+            <button class="cards__button" href="#">Más información</button>
+        </article>
+        <!--card-4-->
+        <article class="cards__conteiner-card"> 
+            <img class="cards__img" src="./images/card-4.png" alt="image-card-4" />
+            <div class="cards__conteiner-text">
+                <h2 class="cards__h2">Historias de 
+                    <span class="cards__span">Starbucks</span>
+                </h2>
+                <p class="cards__p">Descubra nuestra empresa y nuestra historia.
+                </p>
+            </div>
+            <button class="cards__button" href="#">Más información</button>
+        </article>
+
+    </section>
 </body>
 </html>
