HTML y CSS footer

--- a/index.html
+++ b/index.html
@@ -135,5 +135,21 @@
         </article>
 
     </section>
+    <!--footer-->
+    <footer class="footer">
+        <div class="footer__conteiner-link-izq">
+            <a class="footer__likn-izq" href="#">inicia sesión</a>
+            <a class="footer__likn-izq" href="#">registrate</a>
+        </div>
+        <div class="footer__conteiner-link-rs">
+            <i class="bi bi-whatsapp"></i>
+            <i class="bi bi-facebook"></i>
+            <i class="bi bi-twitter-x"></i>
+        </div>
+        <div class="footer__conteiner-link-der">
+            <a class="footer__link-der" href="#">contactanos aquí</a>
+        </div>
+
+    </footer>    
 </body>
 </html>
